# drug-clinic-asssistant

./: .env  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: config.py  main.py  pyproject.toml
backend/middleware/: cors.py  logger.py  rate_limit.py
backend/models/: chat_models.py  clinic_models.py  medicine_models.py
backend/prompts/: faq_prompt.txt  medicine_prompt.txt  simplify_prompt.txt  system_prompt.txt
backend/routers/: chat.py  clinics.py  health.py  medicines.py
backend/services/: claude_service.py  clinic_service.py  embedding_service.py  medicine_service.py  rag_service.py  safety_filter.py
backend/tests/: test_api.py  test_prompts.py  test_rag.py  test_safety.py
data/: chunk_utils.py  ingest.py  sources.md  validate_data.py
data/clinics/: kampala_clinics.json  pharmacies.json  public_hospitals.json  wakiso_clinics.json
data/processed/: faqs.json
docs/: api_contract.md  architecture.md  prompt_decisions.md  setup_guide.md  sprint_log.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/about/: page.tsx
frontend/app/api/chat/: route.ts  routes.tsx
frontend/app/chat/: loading.tsx  page.tsx
frontend/app/clinics/: page.tsx
frontend/app/medicines/: page.tsx
frontend/app/medicines/[name]/: page.tsx
frontend/components/chat/: ChatInput.tsx  ChatWindow.tsx  MedicineCard.tsx  MessageBubble.tsx  SourceBadge.tsx  TopicChips.tsx  TypingIndicator.tsx
frontend/components/clinics/: ClinicCard.tsx  ClinicDetailPanel.tsx  ClinicList.tsx  ClinicMap.tsx  MapEmbed.tsx
frontend/components/layout/: DisclaimerBanner.tsx  Footer.tsx  Navbar.tsx
frontend/components/medicine/: MedicineCard.tsx  MedicineSearch.tsx
frontend/components/ui/: Badge.tsx  Button.tsx  DisclaimerBanner.tsx  ErrorMessage.tsx  LoadingSpinner.tsx  NavBar.tsx  SearchBar.tsx  Spinner.tsx
frontend/hooks/: useChat.ts  useClinics.ts  useMedicine.ts
frontend/lib/: api-client.ts  api.ts  types.ts  utils.ts
frontend/lib/hooks/: useChat.ts  useChats.ts  useClinics.ts
