[project]
name = "health-assistant-ug"
version = "0.1.0"
description = "AI-powered drug and clinic information assistant for Uganda"
requires-python = ">=3.11"

dependencies = [
    # ── API & Server ─────────────────────────
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "slowapi>=0.1.9",
    "httpx>=0.27.0",

    # ── AI & RAG ─────────────────────────────
    "anthropic>=0.28.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-anthropic>=0.1.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",

    # ── PDF & Data Processing ─────────────────
    "pypdf2>=3.0.0",
    "pymupdf>=1.24.0",
    "tiktoken>=0.7.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]   # pycodestyle, pyflakes, isort, pyupgrade
ignore = ["E501"]                  # line too long — handled by formatter

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
