[project]
name = "health-assistant-backend"
version = "0.1.0"
description = "HealthAssist UG — FastAPI backend with RAG pipeline"
requires-python = ">=3.12"

dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.7.1",
    "pydantic-settings==2.3.1",
    "python-dotenv==1.0.1",
    "anthropic==0.28.0",
    "langchain==0.2.5",
    "langchain-anthropic==0.1.15",
    "langchain-community==0.2.5",
    "langchain-text-splitters==0.2.1",
    "chromadb==0.5.3",
    "sentence-transformers==3.0.0",
    "pypdf2==3.0.1",
    "pdfplumber==0.11.1",
    "slowapi==0.1.9",
    "httpx==0.27.0",
    "loguru==0.7.2",
]

[dependency-groups]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "httpx==0.27.0",
    "ruff==0.4.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
